# a22

./: .gitignore  Makefile  README.md  docker-compose.yml  go.mod  go.sum
ai-predictor/: app.py  notifier.py  predictor.py  requirements.txt
cmd/chaos-manager/: main.go
cmd/ebpf-probe/: main.go
cmd/es-consumer/: main.go
cmd/function-a/: main.go
cmd/function-b/: chaos.js  index.js  package.json
cmd/function-c/: app.py  chaos.py
cmd/gateway/: main.go
cmd/kafka-producer/: main.go
cmd/nats-consumer/: main.go
cmd/nats-producer/: main.go
cmd/query-api/: main.go
docker/: Dockerfile.ai-predictor  Dockerfile.chaos-manager  Dockerfile.ebpf-probe  Dockerfile.es-consumer  Dockerfile.function-a  Dockerfile.function-b  Dockerfile.function-c  Dockerfile.gateway  Dockerfile.kafka-producer  Dockerfile.nats-consumer  Dockerfile.nats-producer  Dockerfile.query-api
internal/chaos/: chaos.go
internal/config/: config.go
internal/ebpf/: event.go  trace_http.c
internal/middleware/: tracing.go
internal/model/: trace.go
internal/natsutil/: common.go  consumer.go  nats.go
internal/sampling/: sampler.go
internal/traceproducer/: producer.go
internal/wasm/: manager.go
k8s/: api-gateway.yaml  functions.yaml  infra.yaml  namespace.yaml  tracing-services.yaml
wasm-plugins/: build.ps1  build.sh
wasm-plugins/slow-request-filter/: Cargo.toml
wasm-plugins/slow-request-filter/src/: lib.rs
web/: topology.html
